value counts method

--- a/introduction/operations_on_Dataframes.ipynb
+++ b/introduction/operations_on_Dataframes.ipynb
@@ -494,9 +494,101 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5cb67981",
+   "metadata": {},
+   "source": [
+    "## 2 Value Counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8e26ef05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1000)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counting gender elements\n",
+    "\n",
+    "# len function\n",
+    "len(df_exams['gender'])\n",
+    "\n",
+    "# .count() method\n",
+    "df_exams['gender'].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ac9d8d4",
+   "metadata": {},
+   "source": [
+    "#### 2.1 counting elements by category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a85f26e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "lunch\n",
+       "standard        645\n",
+       "free/reduced    355\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exams['lunch'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c7568bb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "female    0.518\n",
+       "male      0.482\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# return the relative frequency (divide all values by the sum of values)\n",
+    "df_exams['gender'].value_counts(normalize = True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cb67981",
+   "id": "940e82dd",
    "metadata": {},
    "outputs": [],
    "source": []
