--- a/introduction/operations_on_Dataframes.ipynb
+++ b/introduction/operations_on_Dataframes.ipynb
@@ -586,9 +586,485 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "940e82dd",
+   "metadata": {},
+   "source": [
+    "## 1. Sort a DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6c4781de",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "      <th>Average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>999</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>77</td>\n",
+       "      <td>86</td>\n",
+       "      <td>86</td>\n",
+       "      <td>83.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>27</td>\n",
+       "      <td>34</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>757</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>72</td>\n",
+       "      <td>70.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>758</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>52</td>\n",
+       "      <td>59</td>\n",
+       "      <td>65</td>\n",
+       "      <td>58.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>53</td>\n",
+       "      <td>72</td>\n",
+       "      <td>64</td>\n",
+       "      <td>63.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>54</td>\n",
+       "      <td>59</td>\n",
+       "      <td>62</td>\n",
+       "      <td>58.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some high school</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>63</td>\n",
+       "      <td>73</td>\n",
+       "      <td>68</td>\n",
+       "      <td>68.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>63</td>\n",
+       "      <td>64.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>87</td>\n",
+       "      <td>84</td>\n",
+       "      <td>85</td>\n",
+       "      <td>85.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>76</td>\n",
+       "      <td>71</td>\n",
+       "      <td>72</td>\n",
+       "      <td>73.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gender race/ethnicity parental level of education         lunch  \\\n",
+       "999  female        group D                some college  free/reduced   \n",
+       "363  female        group D            some high school  free/reduced   \n",
+       "757    male        group E           bachelor's degree  free/reduced   \n",
+       "758  female        group D                some college  free/reduced   \n",
+       "760  female        group C                 high school  free/reduced   \n",
+       "..      ...            ...                         ...           ...   \n",
+       "404  female        group C                 high school      standard   \n",
+       "405  female        group C            some high school      standard   \n",
+       "406    male        group B          associate's degree      standard   \n",
+       "409    male        group D          associate's degree      standard   \n",
+       "499    male        group E                some college      standard   \n",
+       "\n",
+       "    test preparation course  math score  reading score  writing score  \\\n",
+       "999                    none          77             86             86   \n",
+       "363                    none          27             34             32   \n",
+       "757               completed          70             68             72   \n",
+       "758               completed          52             59             65   \n",
+       "760                    none          53             72             64   \n",
+       "..                      ...         ...            ...            ...   \n",
+       "404                    none          54             59             62   \n",
+       "405                    none          63             73             68   \n",
+       "406               completed          65             65             63   \n",
+       "409               completed          87             84             85   \n",
+       "499                    none          76             71             72   \n",
+       "\n",
+       "       Average  \n",
+       "999  83.000000  \n",
+       "363  31.000000  \n",
+       "757  70.000000  \n",
+       "758  58.666667  \n",
+       "760  63.000000  \n",
+       "..         ...  \n",
+       "404  58.333333  \n",
+       "405  68.000000  \n",
+       "406  64.333333  \n",
+       "409  85.333333  \n",
+       "499  73.000000  \n",
+       "\n",
+       "[1000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort by one Column\n",
+    "df_exams.sort_values('lunch')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f46ac412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort descending by multiple columns and update dataframe\n",
+    "df_exams.sort_values(['math score', 'reading score', 'writing score'], ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2a368828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>race/ethnicity</th>\n",
+       "      <th>parental level of education</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>test preparation course</th>\n",
+       "      <th>math score</th>\n",
+       "      <th>reading score</th>\n",
+       "      <th>writing score</th>\n",
+       "      <th>Average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>458</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>bachelor's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>962</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group E</td>\n",
+       "      <td>associate's degree</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>93</td>\n",
+       "      <td>97.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>625</th>\n",
+       "      <td>male</td>\n",
+       "      <td>group D</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>completed</td>\n",
+       "      <td>100</td>\n",
+       "      <td>97</td>\n",
+       "      <td>99</td>\n",
+       "      <td>98.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>22</td>\n",
+       "      <td>39</td>\n",
+       "      <td>33</td>\n",
+       "      <td>31.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>787</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>some college</td>\n",
+       "      <td>standard</td>\n",
+       "      <td>none</td>\n",
+       "      <td>19</td>\n",
+       "      <td>38</td>\n",
+       "      <td>32</td>\n",
+       "      <td>29.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>some high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>18</td>\n",
+       "      <td>32</td>\n",
+       "      <td>28</td>\n",
+       "      <td>26.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>980</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group B</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>23</td>\n",
+       "      <td>18.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>female</td>\n",
+       "      <td>group C</td>\n",
+       "      <td>some high school</td>\n",
+       "      <td>free/reduced</td>\n",
+       "      <td>none</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     gender race/ethnicity parental level of education         lunch  \\\n",
+       "458  female        group E           bachelor's degree      standard   \n",
+       "916    male        group E           bachelor's degree      standard   \n",
+       "962  female        group E          associate's degree      standard   \n",
+       "149    male        group E          associate's degree  free/reduced   \n",
+       "625    male        group D                some college      standard   \n",
+       "..      ...            ...                         ...           ...   \n",
+       "145  female        group C                some college  free/reduced   \n",
+       "787  female        group B                some college      standard   \n",
+       "17   female        group B            some high school  free/reduced   \n",
+       "980  female        group B                 high school  free/reduced   \n",
+       "59   female        group C            some high school  free/reduced   \n",
+       "\n",
+       "    test preparation course  math score  reading score  writing score  \\\n",
+       "458                    none         100            100            100   \n",
+       "916               completed         100            100            100   \n",
+       "962                    none         100            100            100   \n",
+       "149               completed         100            100             93   \n",
+       "625               completed         100             97             99   \n",
+       "..                      ...         ...            ...            ...   \n",
+       "145                    none          22             39             33   \n",
+       "787                    none          19             38             32   \n",
+       "17                     none          18             32             28   \n",
+       "980                    none           8             24             23   \n",
+       "59                     none           0             17             10   \n",
+       "\n",
+       "        Average  \n",
+       "458  100.000000  \n",
+       "916  100.000000  \n",
+       "962  100.000000  \n",
+       "149   97.666667  \n",
+       "625   98.666667  \n",
+       "..          ...  \n",
+       "145   31.333333  \n",
+       "787   29.666667  \n",
+       "17    26.000000  \n",
+       "980   18.333333  \n",
+       "59     9.000000  \n",
+       "\n",
+       "[1000 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_exams"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "940e82dd",
+   "id": "05d2b83b",
    "metadata": {},
    "outputs": [],
    "source": []
