--- a/introduction/projectA/webScrapingWithPandas.ipynb
+++ b/introduction/projectA/webScrapingWithPandas.ipynb
@@ -1281,8 +1281,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "3716f971",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2208 entries, 0 to 551\n",
+      "Columns: 107 entries, Div to AvgCAHA\n",
+      "dtypes: float64(82), int64(16), object(9)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_all_data['English League 2'].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d520fd6c",
    "metadata": {},
    "outputs": [],
    "source": []
