--- a/filtering Data/drop_duplicates.ipynb
+++ b/filtering Data/drop_duplicates.ipynb
@@ -1973,6 +1973,525 @@
     "df_laptops_screen_size_big = df_laptops_sort.drop_duplicates(['Company'], keep='last', ignore_index=True)[['Company', 'Inches']]\n",
     "df_laptops_screen_size_big"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a998484c",
+   "metadata": {},
+   "source": [
+    "### Practice Exercise "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "ebf8e1b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Exercise1: Find the 3 most expensive and 3 cheapest laptops overall.\n",
+    "## then show only their companny, product and price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ecfffe7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_laptops= pd.read_csv('Laptop_price.csv', encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "0d5e5cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 2.3GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 640</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>1339.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>Macbook Air</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>1440x900</td>\n",
+       "      <td>Intel Core i5 1.8GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>128GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics 6000</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.34kg</td>\n",
+       "      <td>898.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>HP</td>\n",
+       "      <td>250 G6</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>Full HD 1920x1080</td>\n",
+       "      <td>Intel Core i5 7200U 2.5GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel HD Graphics 620</td>\n",
+       "      <td>No OS</td>\n",
+       "      <td>1.86kg</td>\n",
+       "      <td>575.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>15.4</td>\n",
+       "      <td>IPS Panel Retina Display 2880x1800</td>\n",
+       "      <td>Intel Core i7 2.7GHz</td>\n",
+       "      <td>16GB</td>\n",
+       "      <td>512GB SSD</td>\n",
+       "      <td>AMD Radeon Pro 455</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.83kg</td>\n",
+       "      <td>2537.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>MacBook Pro</td>\n",
+       "      <td>Ultrabook</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>IPS Panel Retina Display 2560x1600</td>\n",
+       "      <td>Intel Core i5 3.1GHz</td>\n",
+       "      <td>8GB</td>\n",
+       "      <td>256GB SSD</td>\n",
+       "      <td>Intel Iris Plus Graphics 650</td>\n",
+       "      <td>macOS</td>\n",
+       "      <td>1.37kg</td>\n",
+       "      <td>1803.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   laptop_ID Company      Product   TypeName  Inches  \\\n",
+       "0          1   Apple  MacBook Pro  Ultrabook    13.3   \n",
+       "1          2   Apple  Macbook Air  Ultrabook    13.3   \n",
+       "2          3      HP       250 G6   Notebook    15.6   \n",
+       "3          4   Apple  MacBook Pro  Ultrabook    15.4   \n",
+       "4          5   Apple  MacBook Pro  Ultrabook    13.3   \n",
+       "\n",
+       "                     ScreenResolution                         Cpu   Ram  \\\n",
+       "0  IPS Panel Retina Display 2560x1600        Intel Core i5 2.3GHz   8GB   \n",
+       "1                            1440x900        Intel Core i5 1.8GHz   8GB   \n",
+       "2                   Full HD 1920x1080  Intel Core i5 7200U 2.5GHz   8GB   \n",
+       "3  IPS Panel Retina Display 2880x1800        Intel Core i7 2.7GHz  16GB   \n",
+       "4  IPS Panel Retina Display 2560x1600        Intel Core i5 3.1GHz   8GB   \n",
+       "\n",
+       "                Memory                           Gpu  OpSys  Weight  \\\n",
+       "0            128GB SSD  Intel Iris Plus Graphics 640  macOS  1.37kg   \n",
+       "1  128GB Flash Storage        Intel HD Graphics 6000  macOS  1.34kg   \n",
+       "2            256GB SSD         Intel HD Graphics 620  No OS  1.86kg   \n",
+       "3            512GB SSD            AMD Radeon Pro 455  macOS  1.83kg   \n",
+       "4            256GB SSD  Intel Iris Plus Graphics 650  macOS  1.37kg   \n",
+       "\n",
+       "   Price_euros  \n",
+       "0      1339.69  \n",
+       "1       898.94  \n",
+       "2       575.00  \n",
+       "3      2537.45  \n",
+       "4      1803.60  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_laptops.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "0bb01e3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>laptop_ID</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>TypeName</th>\n",
+       "      <th>Inches</th>\n",
+       "      <th>ScreenResolution</th>\n",
+       "      <th>Cpu</th>\n",
+       "      <th>Ram</th>\n",
+       "      <th>Memory</th>\n",
+       "      <th>Gpu</th>\n",
+       "      <th>OpSys</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1215</th>\n",
+       "      <td>1233</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>C740-C9QX (3205U/2GB/32GB/Chrome</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core 3205U 1.5GHz</td>\n",
+       "      <td>2GB</td>\n",
+       "      <td>32GB SSD</td>\n",
+       "      <td>Intel HD Graphics</td>\n",
+       "      <td>Chrome OS</td>\n",
+       "      <td>1.3kg</td>\n",
+       "      <td>174.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>290</th>\n",
+       "      <td>295</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Chromebook C910-C2ST</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core 3205U 1.5GHz</td>\n",
+       "      <td>2GB</td>\n",
+       "      <td>16GB SSD</td>\n",
+       "      <td>Intel HD Graphics</td>\n",
+       "      <td>Chrome OS</td>\n",
+       "      <td>2.19kg</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1102</th>\n",
+       "      <td>1117</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Chromebook 15</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core 3205U 1.5GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>16GB SSD</td>\n",
+       "      <td>Intel HD Graphics</td>\n",
+       "      <td>Chrome OS</td>\n",
+       "      <td>2.20kg</td>\n",
+       "      <td>209.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>703</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>TravelMate B117-M</td>\n",
+       "      <td>Netbook</td>\n",
+       "      <td>11.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3050 1.6GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>32GB Flash Storage</td>\n",
+       "      <td>Intel HD Graphics</td>\n",
+       "      <td>Windows 10</td>\n",
+       "      <td>1.4kg</td>\n",
+       "      <td>269.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1198</th>\n",
+       "      <td>1216</td>\n",
+       "      <td>Acer</td>\n",
+       "      <td>Aspire 3</td>\n",
+       "      <td>Notebook</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>1366x768</td>\n",
+       "      <td>Intel Celeron Dual Core N3350 2GHz</td>\n",
+       "      <td>4GB</td>\n",
+       "      <td>1TB HDD</td>\n",
+       "      <td>Intel HD Graphics 500</td>\n",
+       "      <td>Linux</td>\n",
+       "      <td>2.1kg</td>\n",
+       "      <td>272.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      laptop_ID Company                           Product  TypeName  Inches  \\\n",
+       "1215       1233    Acer  C740-C9QX (3205U/2GB/32GB/Chrome   Netbook    11.6   \n",
+       "290         295    Acer              Chromebook C910-C2ST  Notebook    15.6   \n",
+       "1102       1117    Acer                     Chromebook 15  Notebook    15.6   \n",
+       "695         703    Acer                 TravelMate B117-M   Netbook    11.6   \n",
+       "1198       1216    Acer                          Aspire 3  Notebook    15.6   \n",
+       "\n",
+       "     ScreenResolution                                   Cpu  Ram  \\\n",
+       "1215         1366x768  Intel Celeron Dual Core 3205U 1.5GHz  2GB   \n",
+       "290          1366x768  Intel Celeron Dual Core 3205U 1.5GHz  2GB   \n",
+       "1102         1366x768  Intel Celeron Dual Core 3205U 1.5GHz  4GB   \n",
+       "695          1366x768  Intel Celeron Dual Core N3050 1.6GHz  4GB   \n",
+       "1198         1366x768    Intel Celeron Dual Core N3350 2GHz  4GB   \n",
+       "\n",
+       "                  Memory                    Gpu       OpSys  Weight  \\\n",
+       "1215            32GB SSD      Intel HD Graphics   Chrome OS   1.3kg   \n",
+       "290             16GB SSD      Intel HD Graphics   Chrome OS  2.19kg   \n",
+       "1102            16GB SSD      Intel HD Graphics   Chrome OS  2.20kg   \n",
+       "695   32GB Flash Storage      Intel HD Graphics  Windows 10   1.4kg   \n",
+       "1198             1TB HDD  Intel HD Graphics 500       Linux   2.1kg   \n",
+       "\n",
+       "      Price_euros  \n",
+       "1215        174.0  \n",
+       "290         199.0  \n",
+       "1102        209.0  \n",
+       "695         269.0  \n",
+       "1198        272.0  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_laptops_sort = df_laptops.sort_values(['Company', 'Price_euros'])\n",
+    "df_laptops_sort.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a94a3495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1215</th>\n",
+       "      <td>Acer</td>\n",
+       "      <td>C740-C9QX (3205U/2GB/32GB/Chrome</td>\n",
+       "      <td>174.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Asus</td>\n",
+       "      <td>Vivobook E200HA</td>\n",
+       "      <td>191.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1120</th>\n",
+       "      <td>Vero</td>\n",
+       "      <td>V131 (X5-Z8350/4GB/32GB/FHD/W10)</td>\n",
+       "      <td>196.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Company                           Product  Price_euros\n",
+       "1215    Acer  C740-C9QX (3205U/2GB/32GB/Chrome        174.0\n",
+       "20      Asus                   Vivobook E200HA        191.9\n",
+       "1120    Vero  V131 (X5-Z8350/4GB/32GB/FHD/W10)        196.0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_laptops_cheap_price =  df_laptops_sort.drop_duplicates(['Company'], keep='first')\n",
+    "df_laptops_cheap_price\n",
+    "# displaying only first three cheap laptops\n",
+    "df_laptops_first_cheap = df_laptops_cheap_price.sort_values('Price_euros')\n",
+    "df_laptops_first_cheap.head(3)[['Company', 'Product','Price_euros']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "4281e797",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Price_euros</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Razer</td>\n",
+       "      <td>Blade Pro</td>\n",
+       "      <td>6099.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>610</th>\n",
+       "      <td>Lenovo</td>\n",
+       "      <td>Thinkpad P51</td>\n",
+       "      <td>4899.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749</th>\n",
+       "      <td>HP</td>\n",
+       "      <td>Zbook 17</td>\n",
+       "      <td>4389.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Company       Product  Price_euros\n",
+       "196   Razer     Blade Pro       6099.0\n",
+       "610  Lenovo  Thinkpad P51       4899.0\n",
+       "749      HP      Zbook 17       4389.0"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3 most expensive laptops\n",
+    "df_laptops_expensive_price = df_laptops_sort.drop_duplicates('Company', keep='last')\n",
+    "df_laptops_expensive_first = df_laptops_expensive_price.sort_values( by=['Price_euros'], ascending=False)\n",
+    "df_laptops_expensive_first[['Company', 'Product', 'Price_euros']].head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8516c523",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
