fixed pandas 2.0 + compatibility issue

--- a/Reshaping and Pivoting Dataframe/pivot_table.ipynb
+++ b/Reshaping and Pivoting Dataframe/pivot_table.ipynb
@@ -18,17 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "79c8a5ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3.3\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "print(pd.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fa4665c5",
    "metadata": {},
    "outputs": [],
@@ -224,6 +233,103 @@
    ],
    "source": [
     "df_sales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "05ab2a8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Tax 5%</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Unit price</th>\n",
+       "      <th>cogs</th>\n",
+       "      <th>gross income</th>\n",
+       "      <th>gross margin percentage</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>2869</td>\n",
+       "      <td>3489.2</td>\n",
+       "      <td>7994.4</td>\n",
+       "      <td>167882.9</td>\n",
+       "      <td>27687.2</td>\n",
+       "      <td>159888.5</td>\n",
+       "      <td>7994.4</td>\n",
+       "      <td>2385.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>2641</td>\n",
+       "      <td>3483.5</td>\n",
+       "      <td>7384.9</td>\n",
+       "      <td>155083.8</td>\n",
+       "      <td>27984.9</td>\n",
+       "      <td>147698.9</td>\n",
+       "      <td>7384.9</td>\n",
+       "      <td>2376.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Quantity  Rating  Tax 5%     Total  Unit price      cogs  \\\n",
+       "Gender                                                             \n",
+       "Female      2869  3489.2  7994.4  167882.9     27687.2  159888.5   \n",
+       "Male        2641  3483.5  7384.9  155083.8     27984.9  147698.9   \n",
+       "\n",
+       "        gross income  gross margin percentage  \n",
+       "Gender                                         \n",
+       "Female        7994.4                   2385.7  \n",
+       "Male          7384.9                   2376.2  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sales.select_dtypes(include='number').pivot_table(index=df_sales['Gender'],\n",
+    "                     aggfunc='sum',).round(1)"
    ]
   },
   {
